--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: python
 python:
   - "3.6"
   - "3.7"
-  - "3.8"
 before_install:
 - pip install poetry
 install:
 - poetry install
 script:
 - poetry run flake8
+- poetry run pytest
