--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ titr = 'pdp7_timetracker.cmd:main'
 flake8 = "*"
 black = { version = "*", allows-prereleases = true }
 flake8-black = "^0.1.1"
+pytest = "^5.2"
+testcontainers = { version = "^2.5", extras = ['postgresql'] }
 
 [build-system]
 requires = ["poetry>=0.12"]
