--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,12 @@ description = ""
 authors = ["alex <alex@pdp7.net>"]
 
 [tool.poetry.dependencies]
-python = ">=3.6"
+python = ">=3.6,<4"
 ipython = "^7.9"
 appdirs = "^1.4"
 psycopg2 = "^2.8"
 tabulate = "^0.8.5"
+urllib3 = "^1.25"
 
 [tool.poetry.scripts]
 titr = 'pdp7_timetracker.cmd:main'
